# arcchallenge

./: ARCHITECTURE.md  BUILD.md  CHAT_INTERFACE.md  Cargo.toml  LICENSE  Makefile  PERFORMANCE.md  README.md  chat_server.py  pyproject.toml  requirements-chat.txt  requirements.txt  setup.py  start_chat.sh
arc_core/: grid.py  grid_accelerated.py  objects.py
arc_core/tests/: __init__.py  test_grid.py  test_objects.py
arc_core_rs/: Cargo.toml  __init__.py
arc_core_rs/benches/: grid_ops.rs
arc_core_rs/src/: components.rs  grid.rs  lib.rs  symmetry.rs
arc_synth_rs/: Cargo.toml  __init__.py
arc_synth_rs/src/: ast.rs  enumerator.rs  evaluator.rs  lib.rs
dsl/: ast.py  interpreter.py  primitives.py
dsl/tests/: __init__.py  test_ast.py  test_interpreter.py  test_primitives.py
scripts/: eval.py  visualize.py
solvers/: object_tracking.py  symmetry.py  tiling.py
solvers/tests/: __init__.py  test_solvers_general.py  test_symmetry.py
static/: chat.js
synth/: enumerator.py  scorer.py
synth/tests/: __init__.py  test_enumerator.py  test_scorer.py
templates/: chat.html
