[workspace]
members = ["arc_core_rs", "arc_synth_rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ARC Challenge Solver Contributors"]
license = "MIT"

[workspace.dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Performance
rayon = "1.8"
crossbeam = "0.8"

# Data structures
rustc-hash = "1.1"
ahash = "0.8"
smallvec = "1.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
